mik-sdk-macros/tests/ui/routes/empty_router.rs
use mik_sdk_macros::routes;

// Error: routes! macro requires at least one route
routes! {}

fn main() {}
